# fischertechnik-industry-4.0

./: Dockerfile  LICENSE  README.md  SOFTWARE_RU.md  docker-compose.yml  main.py  nginx.conf  pytest.ini  requirements.txt
nginx/: nginx.conf
src/: __init__.py  factory.py  singleton.py  test_factory.py
src/api/: __init__.py  config.py  server.py  test_server.py
src/core/: __init__.py  factory.py  mock_factory.py  test_factory.py
src/core/stages/: __init__.py  crane.py  handle_center.py  sort_center.py  storage.py
src/models/: __init__.py  models.py
src/qt_app/: .gitignore  About.qml  Auto.qml  AutoLogo.qml  AutoMode.qml  BackButton.qml  CMakeLists.txt  Footer.qml  Header.qml  Main.qml  ManualMode.qml  Menu.qml  MenuLogo.qml  Settings.qml  main.cpp  network_manager.cpp  network_manager.hpp  pythonmanager.cpp  pythonmanager.h  storage_monitor.cpp  storage_monitor.hpp
src/server/: Dockerfile  config.json  server.py
src/stages/: __init__.py  crane.py  handle_center.py  painting_center.py  shipment_center.py  sort_center.py  sorting_center.py  stage.py  storage.py
test/: test.py
tests/: conftest.py  mock_factory.py  test_factory.py  test_mock_factory.py  test_models.py  test_server.py  test_test_factory.py
